# container-images

./: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE
.github/workflows/: deploy-images.yml  test.yml
deployment_image/: BUILD.bazel  entrypoint.sh  test.yaml
src/main/java/example/: HelloWorld.java  HelloWorldLogger.java  HelloWorldLoggerImpl.java  HelloWorldModule.java
src/test/java/example/: HelloWorldLoggerJunit4Test.java
