load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# Combine all the binaries into a tar
pkg_tar(
    name = "binaries_tar",
    files = {
        "@bazelisk_binary//file": "bazel",
        "@jq_binary//file": "jq",
        "@terraform_binary//:file": "terraform",
    },
    mode = "0755",
    package_dir = "usr/bin",
)

# Define the OCI image rule
oci_image(
    name = "image",
    base = "@debian",
    tars = [
        ":binaries_tar",
    ],
)

container_structure_test(
    name = "image_test",
    configs = ["test.yaml"],
    image = ":image",
)

oci_push(
    name = "push_image",
    image = ":image",
    repository = "$(image_registry)/$(image_name)",
    remote_tags = [
        "$(image_tag)",
        "latest",
    ]
)
